# base

./: .gitignore  README.md  jxhg-springbooot-server.rar  pom.xml
codegen/: run-codegen.bat
codegen-tool/: codegen.json  pom.xml
codegen/codegen-tool/: pom.xml  (+1 more)
codegen/codegen-tool-py/: README.md  codegen_runner.py  create_init_files.py  main.py  pyproject.toml  test_post.py
codegen/codegen-tool-py/codegen/: code_generator.py  config_loader.py
codegen/codegen-tool-py/codegen/dataBase/: README.md  codegen.db  init_db.py
codegen/codegen-tool-py/codegen/generators/: base_generator.py  dto_generator.py  entity_generator.py  mapper_generator.py  repository_generator.py  service_generator.py  service_impl_generator.py
codegen/codegen-tool-py/codegen/templates/java/: dto.j2  entity-subselect.j2  entity-table.j2  mapper.j2  repository.j2  service.j2  serviceImpl.j2
codegen/codegen-tool-py/codegen_tool_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codegen/codegen-tool-py/output/com/example/demo/app/pwlpz/dto/: TestEntityDto.java
codegen/codegen-tool-py/output/com/example/demo/app/pwlpz/entity/: TestEntity.java
codegen/codegen-tool-py/output/com/example/demo/app/pwlpz/mapper/: TestEntityMapper.java
codegen/codegen-tool-py/output/com/example/demo/app/pwlpz/repository/: TestEntityRepository.java
codegen/codegen-tool-py/output/com/example/demo/app/pwlpz/service/: TestEntityService.java
codegen/codegen-tool-py/output/com/example/demo/app/pwlpz/service/impl/: TestEntityServiceImpl.java
demo/: pom.xml
h2-server/: pom.xml
(+496 files in other folders)
